# Geometric-Consistency-and-Quasi-clique

./: README.md
geometricunderstanding/experiments/geotransformer.3dmatch.stage4.gse.k3.max.oacl.stage2.sinkhorn/: config.py  eval.sh  loss.py  model.py  test.py  test.sh  trainval.py  visualization.py
geometricunderstanding/experiments/geotransformer.kitti.stage5.gse.k3.max.oacl.stage2.sinkhorn/: config.py  model.py  test.py  test.sh
geometricunderstanding/experiments/geotransformer.modelnet.rpmnet.stage4.gse.k3.max.oacl.stage2.sinkhorn/: config.py  loss.py  model.py
geometricunderstanding/geotransformer/engine/: base_trainer.py
geometricunderstanding/geotransformer/modules/geotransformer/: __init__.py  geotransformer.py
geometricunderstanding/geotransformer/modules/ops/: pointcloud_partition.py
quasi-clique/: CMakeLists.txt
quasi-clique/include/: Corepruning.h  Eva.h  FastQC.h  Util.h  global_counter.h
quasi-clique/src/: Corepruning.cpp  FastQC.cpp  PCR.cpp  Util.cpp  desc_dec.cpp  funcs.cpp  global_counter.cpp  main.cpp  registration.cpp  visualization.cpp
